2009-02-19  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinygnus.el (tinygnus-summary-compose-current-mail-as-template):
	Reformat indentation.

	* tiny/tinydebian.el (tinydebian-bug-gnu-savannah-site-support-p):
	Rename.
	(tinydebian-bug-generic-string-p): New.
	(tinydebian-bug-gnu-savannah-buffer-url-p): New.
	(tinydebian-with-gnus-article-buffer): New.
	(tinydebian-bug-url): In `gnus-summary-mode', check savannah request
	from gnus article buffer.
	(tinydebian-bug-gnus-article-buffer-p): New.

2009-02-12  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-face-list-unique): Remove incorrect
	`interactive' spec.
	(tinylisp-face-print): Display `face-defface-spec' property if
	new arg FULL is non-nil.
	(tinylisp-face-list-font-lock-faces): Add new optional arg DETAILS.
	(tinylisp-face-list-known-faces): Add new optional arg DETAILS.
	(tinylisp-:menu-misc-1): document new DETAILS prefix arg.
	(tinylisp-whitespace-cleanup-eol): New.
	(tinylisp-autoload-write-loaddefs-file): Use
	`tinylisp-whitespace-cleanup-eol'.

2009-02-08  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::package-autoload-create-on-file): Squeeze
	multiple spaces into one (functions 'args').

	* tiny/tinylisp.el
	-- commit 336887a + 1: Change all generated filenames:
	   FILE-autoload.el 		=> FILE-autoloads-plain.el
	   FILE-autoload-interactive.el => FILE-autoloads-plain-interactive.el
	   FILE-loaddefs.el		=> FILE-autoloads.el
	(tinylisp-autoload-quick-build-from-buffer):
	Add missing `buffer-file-name'.
	(tinylisp-autoload-quick-build-interactive-from-file): Correct
	reading interactive file name.
	(tinylisp-autoload-quick-build-from-file): Correct
	reading interactive file name.
	(tinylisp-autoload-generate-loaddefs-file): Correct
	reading interactive file name.
	(tinylisp-autoload-generate-loaddefs-dir): Improve `exclude'
	argument handling.
	(tinylisp-directory-file-list): New.
	(tinylisp-autoload-generate-loaddefs-file-list): New.